<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strNomina"
            android:textSize="24sp"
            android:layout_marginTop="25dp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strNombre"
            android:textSize="18sp"
            android:layout_marginVertical="20dp"
            android:layout_gravity="center"/>

        <EditText
            android:inputType="text"
            android:id="@+id/txtNombre"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/strNombre"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:autofillHints="name"/>

        <ImageView
            android:contentDescription="@string/app_name"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:layout_marginVertical="30dp"
            android:src="@drawable/empresa_logo"/>

        <Button
            android:id="@+id/btnEntrar"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/strEntrar"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"/>

        <Button
            android:id="@+id/btnSalir"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/strRegresar"
            android:textSize="18sp"
            android:layout_gravity="center"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>